--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <header>
         <nav>
+            <a href="">WebStudio</a>
             <ul>
-                <li><a href="">WebStudio</a></li>
                 <li><a href="">Студия</a></li>
                 <li> <a href="">Портфолио</a></li>
                 <li> <a href="">Контакты</a></li>
@@ -31,69 +31,69 @@
             <h1>
                 Эффективные решения для вашего бизнеса
             </h1>
-            <button>Заказать услугу</button>
+            <button type="button">Заказать услугу</button>
+        </section>
+        <!--Особливості-->
+        <section>
+            <h2>Особенности</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также <br> начало повседневной работы по <br> формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности <br> же рамки и место обучения кадров <br> влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с <br> широким активом в значительной <br> степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько <br> очевидна, что реализация плановых <br> заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <!--Чим_ми_займаємся-->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./images/img.jpg" alt="programmer" width="370"></li>
+                <li><img src="./images/img2.jpg" alt="programmer" width="370"></li>
+                <li><img src="./images/img3.jpg" alt="programmer" width="370"></li>
+            </ul>
+        </section>
+        <!--Наша_команда-->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li><img src="./images/img4.jpg" alt="people" width="270">
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
+                </li>
+                <li><img src="./images/img5.jpg" alt="people" width="270">
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
+                </li>
+                <li><img src="./images/img6.jpg" alt="people" width="270">
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li><img src="./images/img7.jpg" alt="people" width="270">
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designer</p>
+                </li>
+            </ul>
         </section>
     </main>
-    <!--Особливості-->
-    <section>
-        <h2>Особенности</h2>
-        <ul>
-            <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также <br> начало повседневной работы по <br> формированию позиции.</p>
-            </li>
-            <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности <br> же рамки и место обучения кадров <br> влечет за собой.</p>
-            </li>
-            <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с <br> широким активом в значительной <br> степени обуславливает.</p>
-            </li>
-            <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько <br> очевидна, что реализация плановых <br> заданий.</p>
-            </li>
-        </ul>
-    </section>
-    <!--Чим_ми_займаємся-->
-    <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li><img src="./images/img.jpg" alt="programmer" width="370"></li>
-            <li><img src="./images/img2.jpg" alt="programmer" width="370"></li>
-            <li><img src="./images/img3.jpg" alt="programmer" width="370"></li>
-        </ul>
-    </section>
-    <!--Наша_команда-->
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li><img src="./images/img4.jpg" alt="people" width="270">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
-            </li>
-            <li><img src="./images/img5.jpg" alt="people" width="270">
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
-            </li>
-            <li><img src="./images/img6.jpg" alt="people" width="270">
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
-            </li>
-            <li><img src="./images/img7.jpg" alt="people" width="270">
-                <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
-            </li>
-        </ul>
-    </section>
     <!--Підвал-->
     <footer>
         <a href="">WebStudio</a>
         <address>
             <ul>
-                <li><a href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+02000/data=!4m2!3m1!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0?sa=X&ved=2ahUKEwiZu4-5_cP4AhUypIsKHWLMAfEQ8gF6BAgPEAE"
-                        target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="https://goo.gl/maps/sx9XBkgbLeAh2KCX8" target="_blank" rel="noopener noreferrer">г. Киев,
+                        пр-т Леси Украинки, 26</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             </ul>
